@@ -63,7 +63,7 @@ $fields = array(
 	'form' =>			array(T_ZBX_STR, O_OPT, P_SYS,	null,	null),
 	'form_copy_to' =>	array(T_ZBX_STR, O_OPT, P_SYS,	null,	null),
 	'form_refresh' =>	array(T_ZBX_INT, O_OPT, null,	null,	null),
-	'fullscreen' =>		array(T_ZBX_INT, O_OPT, P_SYS,	null,	null)
+	'fullscreen' =>		array(T_ZBX_INT, O_OPT, P_SYS,	IN('0,1'),	null)
 );
 check_fields($fields);
 
@@ -151,7 +151,8 @@ $data = array(
 	'stime' => get_request('stime'),
 	'plaintext' => isset($_REQUEST['plaintext']),
 	'iv_string' => array(ITEM_VALUE_TYPE_LOG => 1, ITEM_VALUE_TYPE_TEXT => 1),
-	'iv_numeric' => array(ITEM_VALUE_TYPE_FLOAT => 1, ITEM_VALUE_TYPE_UINT64 => 1)
+	'iv_numeric' => array(ITEM_VALUE_TYPE_FLOAT => 1, ITEM_VALUE_TYPE_UINT64 => 1),
+	'fullscreen' => $_REQUEST['fullscreen']
 );
 
 // render view
