@@ -25,8 +25,11 @@ if (!isset($page['type'])) {
 if (!isset($page['file'])) {
 	$page['file'] = basename($_SERVER['PHP_SELF']);
 }
-if ($_REQUEST['fullscreen'] = get_request('fullscreen', 0)) {
-	define('ZBX_PAGE_NO_MENU', 1);
+$_REQUEST['fullscreen'] = get_request('fullscreen', 0);
+if ($_REQUEST['fullscreen'] === '1') {
+	if (!defined('ZBX_PAGE_NO_MENU')) {
+		define('ZBX_PAGE_NO_MENU', 1);
+	}
 	define('ZBX_PAGE_FULLSCREEN', 1);
 }
 
@@ -41,7 +44,9 @@ if (!defined('ZBX_PAGE_NO_THEME')) {
 switch ($page['type']) {
 	case PAGE_TYPE_IMAGE:
 		set_image_header();
-		define('ZBX_PAGE_NO_MENU', 1);
+		if (!defined('ZBX_PAGE_NO_MENU')) {
+			define('ZBX_PAGE_NO_MENU', 1);
+		}
 		break;
 	case PAGE_TYPE_XML:
 		header('Content-Type: text/xml');
@@ -171,7 +176,7 @@ CSS;
 	$pageHeader->addJsBeforeScripts('var PHP_TZ_OFFSET = '.date('Z').';');
 
 	// show GUI messages in pages with menus and in fullscreen mode
-	$showGuiMessaging = (!defined('ZBX_PAGE_NO_MENU') || (isset($_REQUEST['fullscreen']) && $_REQUEST['fullscreen'])) ? 1 : 0;
+	$showGuiMessaging = (!defined('ZBX_PAGE_NO_MENU') || $_REQUEST['fullscreen'] == 1) ? 1 : 0;
 	$path = 'jsLoader.php?ver='.ZABBIX_VERSION.'&amp;lang='.CWebUser::$data['lang'].'&showGuiMessaging='.$showGuiMessaging;
 	$pageHeader->addJsFile($path);
 
