@@ -33,7 +33,14 @@ $configComboBox->addItem('slides.php', _('Slide shows'));
 $slideHeaderForm->addItem($configComboBox);
 
 if (empty($this->data['slideshows'])) {
-	$slideWidget->addPageHeader(_('SLIDE SHOWS'), $slideHeaderForm);
+	$slideWidget->addPageHeader(
+		_('SLIDE SHOWS'),
+		array(
+			$slideHeaderForm,
+			SPACE,
+			get_icon('fullscreen', array('fullscreen' => $this->data['fullscreen']))
+		)
+	);
 	$slideWidget->addItem(BR());
 	$slideWidget->addItem(new CTableInfo(_('No slide shows defined.')));
 }
